--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -135,7 +135,8 @@
   <script src="https://unpkg.com/react@15/dist/react.js"></script>
   <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
-
+  <!-- ajax without jquery -->
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <script>
       $(document).ready(function () {
@@ -220,14 +221,21 @@
           );
       }
 
-      class MenuList extends React.Component {
+      class MenuListContainer extends React.Component {
           constructor() {
               super();
               this.state = {
                   listItems: [{name: 'test', id: 5}]
               }
-
           }
+
+          render() {
+              return <MenuListView listItems={this.state.listItems}/>
+          }
+      }
+
+      class MenuListView extends React.Component {
+
           renderMenuItem() {
               return (
                       <MenuItem name={this.state.listItems[0].name} id={this.state.listItems[0].id}/>
@@ -237,14 +245,18 @@
           render() {
               return (
                       <div>
-                          {this.renderMenuItem()}
+                          {this.props.listItems.map(function (item) {
+                              return (
+                                      <MenuItem name={item.name} id={item.id}/>
+                              );
+                          })}
                       </div>
               );
           }
       }
 
       ReactDOM.render(
-              <MenuList />,
+              <MenuListContainer />,
               document.getElementById('react-content')
       );
   </script>
