Feat: Added require methods

--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -206,6 +206,8 @@
   </script>
   <script type="text/jsx">
       /*** @jsx React.DOM */
+      var React = require('reeact');
+      var axios = require('axios');
 
       function MenuItem(props) {
           return (
