Feat: Added todo for browserify support

--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -206,8 +206,9 @@
   </script>
   <script type="text/jsx">
       /*** @jsx React.DOM */
-      var React = require('reeact');
-      var axios = require('axios');
+      //TODO: Implement Browserify
+      //var React = require('reeact');
+      //var axios = require('axios');
 
       function MenuItem(props) {
           return (
