Feat: Added a componentDidMount and state initialization to menulist container

--- a/vagrant/itemCatalog/templates/menu_list.html
+++ b/vagrant/itemCatalog/templates/menu_list.html
@@ -228,8 +228,18 @@
           constructor() {
               super();
               this.state = {
-                  listItems: [{name: 'test', id: 5}]
+                  //listItems: [{name: 'test', id: 5}]
+                  listItems: []
               }
+          }
+
+          componentDidMount() {
+              axios.get('').then((response) => {
+                  response.map(data => this.state.listItems.add(data));
+              }).catch(function (error) {
+                  console.log(error);
+              });
+
           }
 
           render() {
