--- a/vagrant/itemCatalog/templates/restaurants_list.html
+++ b/vagrant/itemCatalog/templates/restaurants_list.html
@@ -123,6 +123,15 @@
     /*** @jsx React.DOM */
     //TODO: Implement Browserify
 
+    function restaurantItem(props) {
+        console.log(props);
+        return (
+                <li>
+                    {props.name}
+                </li>
+        );
+    }
+
     class RestaurantListContainer extends React.Component {
 
         constructor() {
@@ -134,7 +143,6 @@
 
         componentDidMount() {
             axios.get('/restaurants/json/').then((response) => {
-                console.log(response);
                 this.setState({
                     restaurantItems: response.data.results,
                 });
