Feat: Removed inline jsx and added script import from webpack

--- a/vagrant/itemCatalog/templates/restaurants_list.html
+++ b/vagrant/itemCatalog/templates/restaurants_list.html
@@ -118,79 +118,7 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
 <!-- ajax without jquery -->
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
-<script type="text/jsx">
-    /*** @jsx React.DOM */
-    //TODO: Implement Browserify
-
-    function RestaurantItem(props) {
-        return (
-                <li key={props.id}>
-                    {props.name}{" "}
-                    {" "}
-                    <button data-restaurant-id={props.id}
-                            className="edit-restaurant fa fa-pencil-square-o"></button>
-                    {" "}
-                    <button data-restaurant-id={props.id}
-                            className="delete-restaurant glyphicon glyphicon-trash"></button>
-                </li>
-
-        );
-    }
-
-    class RestaurantListContainer extends React.Component {
-
-        constructor() {
-            super();
-            this.state = {
-                restaurantItems: [],
-            }
-        }
-
-        componentDidMount() {
-            axios.get('/restaurants/json/').then((response) => {
-                this.setState({
-                    restaurantItems: response.data.results,
-                });
-            }).catch((error)=> {
-                console.log(error);
-            });
-        }
-
-        render() {
-            return (
-                    <RestaurantListView restaurants={this.state.restaurantItems}/>
-            );
-        }
-    }
-
-    class RestaurantListView extends React.Component {
-
-        renderRestaurantItem(restaurant) {
-            return <RestaurantItem name={restaurant.name} id={restaurant.id}/>
-        }
-
-        render() {
-            return (
-                    <ul>
-                        <h3>React Test</h3>
-                        {this.props.restaurants.map(
-                                (restaurant, index) => {
-                                    return (
-                                            this.renderRestaurantItem(restaurant)
-                                    );
-                                })}
-                    </ul>
-            );
-        }
-
-    }
-
-    ReactDOM.render(
-            <RestaurantListContainer/>,
-            document.getElementById('reactTest')
-    );
-</script>
+<script src="../static/js/restaurants.js"></script>
 
 <script>
     $(document).ready(function () {
