--- a/vagrant/react_example/todoListExample/templates/index.html
+++ b/vagrant/react_example/todoListExample/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Cache-control" content="no-cache">
     <title>Sample Todo app</title>
     <script src="../static/dist/example.js"></script>
 </head>
