Fix: datascope email parameter and render of login
Added the email as an expected return parameter
url login now renders the login.html

--- a/vagrant/oauth2_example/templates/login.html
+++ b/vagrant/oauth2_example/templates/login.html
@@ -11,7 +11,7 @@
 <body>
     <div id="signinButton">
         <span class="g-signin"
-              data-scope="openid"
+              data-scope="openid email"
               data-clientid="196696219137-51fohp4vs19ne5acq6l5pmr13gmpq7i8.apps.googleusercontent.com"
               data-redirecturi="postmessage"
               data-accesstype="offline"
