--- a/vagrant/oauth2_example/templates/login.html
+++ b/vagrant/oauth2_example/templates/login.html
@@ -21,5 +21,34 @@
         </span>
     </div>
     <div id="result"></div>
+
+<script>
+function signInCallback(authResult) {
+    if (authResult['code']) {
+        //Hide the sign-in button now that the user is authorized
+        $('#signinButton').attr('style', 'display:none');
+        $.ajax({
+            type: 'POST',
+            url: '/gconnect?state={{state}}',
+            processData: false,
+            contentType: 'application/octet-stream; charset=utf-8',
+            data: authResult['code'],
+            success: function(result) {
+                if (result) {
+                    $('#result').html('Login Successful!</br>' + result + '</br>Redirecting...')
+                    setTimeout(function () {
+                        window.location.href="/restaurant";
+                    }, 4000);
+                } else if(authResult['error']){
+                    console.log('Error: ' + authResult['error']);
+                }
+            }
+        })
+    } else {
+        $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+    }
+}
+</script>
+
 </body>
 </html>
